@@ -12,7 +12,7 @@ Welcome to Python MSS's documentation!
 
 An ultra fast cross-platform multiple screenshots module in pure python using ctypes.
 
-    - **Python 3.7+** and :pep:`8` compliant, no dependency, thread-safe;
+    - **Python 3.8+** and :pep:`8` compliant, no dependency, thread-safe;
     - very basic, it will grab one screen shot by monitor or a screen shot of all monitors and save it to a PNG file;
     - but you can use PIL and benefit from all its formats (or add yours directly);
     - integrate well with Numpy and OpenCV;
