@@ -5,7 +5,7 @@ Support
 Feel free to try MSS on a system we had not tested, and let us know by creating an `issue <https://github.com/BoboTiG/python-mss/issues>`_.
 
     - OS: GNU/Linux, macOS and Windows
-    - Python: 3.7 and newer
+    - Python: 3.8 and newer
 
 
 Future
@@ -32,4 +32,5 @@ Abandoned
 - Python 3.3 (2017-12-05)
 - Python 3.4 (2018-03-19)
 - Python 3.5 (2022-10-27)
-- Python 3.6 (202x-xx-xx)
+- Python 3.6 (2022-10-27)
+- Python 3.7 (2023-xx-xx)
